--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -47,6 +47,7 @@ button {
   max-width: toRem(1082px);
   width: 100%;
   margin: 0 auto;
+  padding: 0 toRem(5px);
 }
 
 .btn {
